--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -53,6 +53,6 @@
     @apply border-border font-["Poppins"];
   }
   body {
-    @apply bg-background  text-foreground;
+    @apply bg-background  text-foreground overflow-hidden;
   }
 }
